# laplacianseg

./: README.md
cpp/: CMakeLists.txt  color.cpp  color.h  commandlineparser.cpp  commandlineparser.h  lcseg.pro  main.cpp  seededsegmentationhard.cpp  seededsegmentationhard.h  seededsegmentationsoft.cpp  seededsegmentationsoft.h  seededspsegmentation.cpp  seededspsegmentation.h  slic.cpp  slic.h  util.h
cpp/cmake/: FindSuiteSparse.cmake
matlab/: Example_1.mat  Example_2.mat  Example_3.mat  Example_4.mat  LCcut.m  LCdiff.m  LCfeats.m  LClinear_hard.m  LCoutput.m  LCseeds.m  LCseg.m  LCweights.m  main_interactive.m  run_me.m
